GS: fix for entries height shift (#3587)
Reintroduce https://github.com/ubuntu/yaru/pull/1462/commits/26919369bc549673e880b2ef683478d847906b12 from #1462

--- a/gnome-shell/src/gnome-shell-sass/widgets/_entries.scss
+++ b/gnome-shell/src/gnome-shell-sass/widgets/_entries.scss
@@ -1,9 +1,10 @@
 /* Entries */
 
 StEntry {
+  min-height: 22px; // Yaru change: fix for height shift
   border-radius: $base_border_radius;
   padding: 8px;
-  border-width: 1px; // Yaru: we want bordered entries
+  border-width: 1px; // Yaru change: we want bordered entries
   color: $fg_color;
 
   @include entry(normal);
